add updateProjectsUseCase
