# backend/internal/transport/http/dto/project.go
@@ -40,3 +40,17 @@ type ListProjectsResponse struct {
 	Total      int64                      `json:"total"`
 	TotalPages int64                      `json:"total_pages"`
 }
+
+type UpdateProjectRequest struct {
+	Name        *string `json:"name"`
+	Description *string `json:"description"`
+}
+
+type UpdateProjectResponse struct {
+	ID          int64     `json:"id"`
+	UserID      int64     `json:"user_id"`
+	Name        string    `json:"name"`
+	Description string    `json:"description"`
+	CreatedAt   time.Time `json:"created_at"`
+	UpdatedAt   time.Time `json:"updated_at"`
+}
