# backend/internal/transport/http/handler/project.go
@@ -17,17 +17,20 @@ type ProjectHandler struct {
 	createProjectUseCase  *projectusecase.CreateProjectUseCase
 	getProjectByIDUseCase *projectusecase.GetProjectByIDUseCase
 	listProjectsUseCase   *projectusecase.ListProjectsUseCase
+	updateProjectUseCase  *projectusecase.UpdateProjectUseCase
 }
 
 func NewProjectHandler(
 	createProjectUseCase *projectusecase.CreateProjectUseCase,
 	getProjectByIDUseCase *projectusecase.GetProjectByIDUseCase,
 	listProjectsUseCase *projectusecase.ListProjectsUseCase,
+	updateProjectUseCase *projectusecase.UpdateProjectUseCase,
 ) *ProjectHandler {
 	return &ProjectHandler{
 		createProjectUseCase:  createProjectUseCase,
 		getProjectByIDUseCase: getProjectByIDUseCase,
 		listProjectsUseCase:   listProjectsUseCase,
+		updateProjectUseCase:  updateProjectUseCase,
 	}
 }
 
@@ -216,4 +219,71 @@ func (h *ProjectHandler) ListProjects(c fiber.Ctx) error {
 	listProjectsResp := mapper.ToListProjectsResponse(outputListProjectsUseCase)
 
 	return c.Status(fiber.StatusOK).JSON(listProjectsResp)
+}
+
+// godoc: UpdateProject godoc
+// @Summary Update Project
+// @Description Update Project
+// @Accept json
+// @Produce json
+// @Param id path int true "Project ID"
+// @Param project body dto.UpdateProjectRequest true "Project"
+// @Success 200 {object} dto.UpdateProjectResponse
+// @Failure 400 {object} httperror.ErrorResponse
+// @Failure 401 {object} httperror.ErrorResponse
+// @Failure 404 {object} httperror.ErrorResponse
+// @Failure 500 {object} httperror.ErrorResponse
+// @Resource Projects
+// @Security BearerAuth
+// @Router /api/v1/projects/{id} [patch]
+func (h *ProjectHandler) Update(c fiber.Ctx) error {
+	id, err := strconv.ParseInt(c.Params("id"), 10, 64)
+	if err != nil {
+		return httperror.Handle(
+			c,
+			apperror.Validation(
+				"invalid id",
+				apperror.NewFieldError(
+					"id",
+					apperror.FieldCodeInvalid,
+					"id must be a valid positive integer",
+				),
+			),
+		)
+	}
+
+	var projectReq dto.UpdateProjectRequest
+	err = c.Bind().Body(&projectReq)
+	if err != nil {
+		return httperror.Handle(
+			c,
+			apperror.Validation("invalid request body"),
+		)
+	}
+
+	userID := c.Locals(middleware.UserIDLocalKey)
+	u, ok := userID.(int64)
+	if !ok {
+		return httperror.Handle(
+			c,
+			apperror.Internal("failed to get user id from request context", errors.New("user_id local is missing or invalid")),
+		)
+	}
+
+	inputUpdateProjectUseCase := mapper.ToUpdateProjectInput(projectReq, id, u)
+
+	outputUpdateProjectUseCase, err := h.updateProjectUseCase.Execute(
+		c.Context(),
+		inputUpdateProjectUseCase,
+	)
+	if err != nil {
+		return httperror.Handle(
+			c,
+			err,
+		)
+	}
+
+	updateProjectResp := mapper.ToUpdateProjectResponse(outputUpdateProjectUseCase)
+
+	return c.Status(fiber.StatusOK).JSON(updateProjectResp)
 }
